--- a/admin/pages/examples/login.html
+++ b/admin/pages/examples/login.html
@@ -27,7 +27,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="../../index2.html"><b>Admin</b>LTE</a>
+    <a href="../../index2.html"><b>Golden Trade</b> Center</a>
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
@@ -52,7 +52,7 @@
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+          <button type="submit" class="btn btn-github btn-block btn-flat">Sign In</button>
         </div>
         <!-- /.col -->
       </div>
